plausible analytics parameterized

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
 
-  {%- if jekyll.environment == 'production' -%}
-    <script defer data-domain="ulmefors.com" src="https://plausible.io/js/plausible.js"></script>
+  {%- if jekyll.environment == 'production' and site.plausible_analytics -%}
+    {%- include plausible-analytics.html -%}
   {%- endif -%}
 
   {%- include custom-head.html -%}
