--- a/_includes/plausible-analytics.html
+++ b/_includes/plausible-analytics.html
@@ -1,5 +1,8 @@
 <!-- the domain name gets auto inserted from the config file -->
 
 {% if site.plausible_analytics %}
+  <!--
   <script defer data-domain="{{site.plausible_analytics}}" src="https://plausible.io/js/plausible.js"></script>
+  -->
+  <script defer data-domain="{{site.plausible_analytics}}" src="http://plausible.ulmefors.com:8000/js/plausible.js"></script>
 {% endif %}
