light text in headers

--- a/_sass/minima/dark-mode.scss
+++ b/_sass/minima/dark-mode.scss
@@ -19,7 +19,11 @@ a:hover {
     color:$high-emph !important;
 }
 
-.site-title, .site-title:visited, .site-nav, .page-link {
+.site-title, .site-title:visited, .post-title, .site-nav, .page-link{
+    color: $high-emph !important;
+}
+
+.home h1, h2, h3{
     color: $high-emph !important;
 }
 
