deploy: fe87a4480dfa8d0e90a328016a3c2c66a7363f94

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -522,7 +522,9 @@ a { color: #4bbaff !important; }
 
 a:hover { color: rgba(255, 255, 255, 0.87) !important; }
 
-.site-title, .site-title:visited, .site-nav, .page-link { color: rgba(255, 255, 255, 0.87) !important; }
+.site-title, .site-title:visited, .post-title, .site-nav, .page-link { color: rgba(255, 255, 255, 0.87) !important; }
+
+.home h1, h2, h3 { color: rgba(255, 255, 255, 0.87) !important; }
 
 .site-nav, .site-header { background-color: #121212; border-color: #333333; }
 
