--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -522,6 +522,10 @@ a { color: #4bbaff !important; }
 
 a:hover { color: rgba(255, 255, 255, 0.87) !important; }
 
+.search-results-list-item .search-result-title { color: rgba(255, 255, 255, 0.69); }
+
+.search-result-highlight { color: #4bbaff; }
+
 .site-title, .site-title:visited, .post-title, .site-nav, .page-link { color: rgba(255, 255, 255, 0.87) !important; }
 
 .home h1, h2, h3 { color: rgba(255, 255, 255, 0.87) !important; }
